# schema1

./: Cargo.toml  bacon.toml
.github/: FUNDING.yml
schema/: Cargo.toml
schema/derive/: Cargo.toml  bacon.toml
schema/derive/src/: lib.rs
schema/src/: lib.rs
src/: cli.rs  debug.rs  id.rs  main.rs  ns.rs  record.rs  store.rs
src/record/: album.rs  artist.rs  track.rs
